--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background: #d87a7a;
+    background: #e7472b;
     padding: 0;
     margin: 0;
 }
@@ -18,7 +18,7 @@ h1 {
 }
 
 .card {
-    background: rgb(230, 92, 92);
+    background: rgb(218, 141, 141);
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.2);
@@ -29,8 +29,8 @@ h1 {
 }
 
 .card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    transform: scale(1.2);
+    box-shadow: 0 4px 12px rgba(74, 123, 228, 0.3);
 }
 
 header {
@@ -95,7 +95,15 @@ footer {
     height: auto;
     border-radius: 12px;
     position: relative;  
-    left: 500px;          
+    left: 700px;          
     top: 120px;            
+}
+
+.paragraf {
+    font-size: 18px;
+    text-align: center;
+    color: black;
+    font-weight: bold;
+    margin-top: 20px;
 }
 
