--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="no">
 <head>
     <meta charset="UTF-8">
-    <title>KantineApp</title>
+    <title>KantineApp_bilder</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
@@ -11,6 +11,7 @@
        <nav class="nav-menu">
            <a href="/" class="nav-link ">Meny</a>
            <a href="/info" class="nav-link">Info</a>
+           <a href="/bilder" class="nav-link">Bilder</a>
        </nav>
     </header>
 
@@ -25,7 +26,9 @@
         {% endfor %}
     </div>
 
-   
+   <p class="paragraf"> Vi har mye materetter som kommer hver dag</p>
+   <p class="paragraf">Lurer du på noe? Trykk på linken nedenfor:</p>
+
 
 <footer>
     <h2> Laget at Patryk </h2>
