--- a/templates/index_info.html
+++ b/templates/index_info.html
@@ -11,11 +11,11 @@
        <nav class="nav-menu">
            <a href="/" class="nav-link">Meny</a>
            <a href="/info" class="nav-link ">Info</a>
+           <a href="/bilder" class="nav-link">Bilder</a>
        </nav>
     </header>
 
     <img src="https://afk.no/handlers/bv.ashx/i6087983d-ffd6-4af9-a1f9-cca87ae41741/w1200/q24627/k4fb561c4bafd/kantine.JPG" class="Kantine_app">
-
 
 <footer>
     <h2> Laget at Patryk </h2>
